--- a/dev/css/socicon.scss
+++ b/dev/css/socicon.scss
@@ -4,5 +4,9 @@ a {
 	transition: color 0.2s ease-out 1s;
 	&:hover {
 		color: #777;
+		text-shadow: 1px 0 1px #383838;
+		}
+	&:active {
+		color: #383838;
 		}
 	}
