--- a/source/css/socicon.css
+++ b/source/css/socicon.css
@@ -1,11 +1,339 @@
-a {
-  color: #333;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  -webkit-transition: color 0.2s ease-out 1s;
-          transition: color 0.2s ease-out 1s; }
-  a:hover {
-    color: #777;
-    text-shadow: 1px 0 1px #383838; }
-  a:active {
-    color: #383838; }
+@font-face {
+  font-family: 'socicon';
+  src: url('../font/socicon-webfont.eot');
+  src: url('../font/socicon-webfont.eot?#iefix') format('embedded-opentype'), url('../font/socicon-webfont.woff') format('woff'), url('../font/socicon-webfont.ttf') format('truetype'), url('../font/socicon-webfont.svg#sociconregular') format('svg');
+  font-weight: normal;
+  font-style: normal; }
+
+.socicon {
+  font-family: 'socicon' !important;
+  overflow: hidden; }
+  .socicon a {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none; }
+
+.socicon {
+  padding-bottom: 20px; }
+
+p {
+  padding: 0;
+  margin: 0;
+  font-family: 'Open Sans';
+  font-weight: 300;
+  font-size: 24px; }
+
+.twitter {
+  background-color: #4da7de; }
+  .twitter:before {
+    content: "a"; }
+
+.facebook {
+  background-color: #3e5b98; }
+  .facebook:before {
+    content: "b"; }
+
+.google {
+  background-color: #d93e2d; }
+  .google:before {
+    content: "c"; }
+
+.pinterest {
+  background-color: #c92619; }
+  .pinterest:before {
+    content: "d"; }
+
+.foursquare {
+  background-color: #23b7e0; }
+  .foursquare:before {
+    content: "e"; }
+
+.yahoo {
+  background-color: #6E2A85; }
+  .yahoo:before {
+    content: "f"; }
+
+.skype {
+  background-color: #28abe3; }
+  .skype:before {
+    content: "g"; }
+
+.yelp {
+  background-color: #c83218; }
+  .yelp:before {
+    content: "h"; }
+
+.feedburner {
+  background-color: #FFCC00; }
+  .feedburner:before {
+    content: "i"; }
+
+.linkedin {
+  background-color: #3371b7; }
+  .linkedin:before {
+    content: "j"; }
+
+.viadeo {
+  background-color: #e4a000; }
+  .viadeo:before {
+    content: "k"; }
+
+.xing {
+  background-color: #005a60; }
+  .xing:before {
+    content: "l"; }
+
+.myspace {
+  background-color: #323232; }
+  .myspace:before {
+    content: "m"; }
+
+.soundcloud {
+  background-color: #fe3801; }
+  .soundcloud:before {
+    content: "n"; }
+
+.spotify {
+  background-color: #7bb342; }
+  .spotify:before {
+    content: "o"; }
+
+.grooveshark {
+  background-color: #000000; }
+  .grooveshark:before {
+    content: "p"; }
+
+.lastfm {
+  background-color: #d41316; }
+  .lastfm:before {
+    content: "q"; }
+
+.youtube {
+  background-color: #e02a20; }
+  .youtube:before {
+    content: "r"; }
+
+.vimeo {
+  background-color: #51b5e7; }
+  .vimeo:before {
+    content: "s"; }
+
+.dailymotion {
+  background-color: #004e72; }
+  .dailymotion:before {
+    content: "t"; }
+
+.vine {
+  background-color: #00b389; }
+  .vine:before {
+    content: "u"; }
+
+.flickr {
+  background-color: #1e1e1b; }
+  .flickr:before {
+    content: "v"; }
+
+.500px {
+  background-color: #58a9de; }
+  .500px:before {
+    content: "w"; }
+
+.instagram {
+  background-color: #9c7c6e; }
+  .instagram:before {
+    content: "x"; }
+
+.wordpress {
+  background-color: #464646; }
+  .wordpress:before {
+    content: "y"; }
+
+.tumblr {
+  background-color: #45556c; }
+  .tumblr:before {
+    content: "z"; }
+
+.blogger {
+  background-color: #ec661c; }
+  .blogger:before {
+    content: "A"; }
+
+.technorati {
+  background-color: #5cb030; }
+  .technorati:before {
+    content: "B"; }
+
+.reddit {
+  background-color: #e74a1e; }
+  .reddit:before {
+    content: "C"; }
+
+.dribbble {
+  background-color: #e84d88; }
+  .dribbble:before {
+    content: "D"; }
+
+.stumbleupon {
+  background-color: #e64011; }
+  .stumbleupon:before {
+    content: "E"; }
+
+.digg {
+  background-color: #1d1d1b; }
+  .digg:before {
+    content: "F"; }
+
+.envato {
+  background-color: #597c3a; }
+  .envato:before {
+    content: "G"; }
+
+.behance {
+  background-color: #000000; }
+  .behance:before {
+    content: "H"; }
+
+.delicious {
+  background-color: #020202; }
+  .delicious:before {
+    content: "I"; }
+
+.deviantart {
+  background-color: #c5d200; }
+  .deviantart:before {
+    content: "J"; }
+
+.forrst {
+  background-color: #5B9A68; }
+  .forrst:before {
+    content: "K"; }
+
+.play {
+  background-color: #000000; }
+  .play:before {
+    content: "L"; }
+
+.zerply {
+  background-color: #9DBC7A; }
+  .zerply:before {
+    content: "M"; }
+
+.wikipedia {
+  background-color: #000000; }
+  .wikipedia:before {
+    content: "N"; }
+
+.apple {
+  background-color: #B9BFC1; }
+  .apple:before {
+    content: "O"; }
+
+.flattr {
+  background-color: #F67C1A; }
+  .flattr:before {
+    content: "P"; }
+
+.github {
+  background-color: #5380c0; }
+  .github:before {
+    content: "Q"; }
+
+.chimein {
+  background-color: #888688; }
+  .chimein:before {
+    content: "R"; }
+
+.friendfeed {
+  background-color: #2F72C4; }
+  .friendfeed:before {
+    content: "S"; }
+
+.newsvine {
+  background-color: #075B2F; }
+  .newsvine:before {
+    content: "T"; }
+
+.identica {
+  background-color: #000000; }
+  .identica:before {
+    content: "U"; }
+
+.bebo {
+  background-color: #EF1011; }
+  .bebo:before {
+    content: "V"; }
+
+.zynga {
+  background-color: #DC0606; }
+  .zynga:before {
+    content: "W"; }
+
+.steam {
+  background-color: #8F8D8A; }
+  .steam:before {
+    content: "X"; }
+
+.xbox {
+  background-color: #92C83E; }
+  .xbox:before {
+    content: "Y"; }
+
+.windows {
+  background-color: #00BDF6; }
+  .windows:before {
+    content: "Z"; }
+
+.outlook {
+  background-color: #0072C6; }
+  .outlook:before {
+    content: "1"; }
+
+.coderwall {
+  background-color: #3E8DCC; }
+  .coderwall:before {
+    content: "2"; }
+
+.tripadvisor {
+  background-color: #000000; }
+  .tripadvisor:before {
+    content: "3"; }
+
+.netcodes {
+  background-color: #2E3436; }
+  .netcodes:before {
+    content: "4"; }
+
+.easid {
+  background-color: #1ABC9C; }
+  .easid:before {
+    content: "5"; }
+
+.lanyrd {
+  background-color: #3c80c9; }
+  .lanyrd:before {
+    content: "7"; }
+
+.slideshare {
+  background-color: #4ba3a6; }
+  .slideshare:before {
+    content: "8"; }
+
+.buffer {
+  background-color: #000000; }
+  .buffer:before {
+    content: "9"; }
+
+.rss {
+  background-color: #f26109; }
+  .rss:before {
+    content: ","; }
+
+.vkontakte {
+  background-color: #5a7fa6; }
+  .vkontakte:before {
+    content: ";"; }
+
+.disqus {
+  background-color: #2e9fff; }
+  .disqus:before {
+    content: ":"; }
