Update gulp-watch. Fix syntax

--- a/dev/css/socicon.scss
+++ b/dev/css/socicon.scss
@@ -53,18 +53,18 @@ p {
 .youtube { background-color: #e02a20; &:before {content: "r"; } }
 .vimeo { background-color: #51b5e7; &:before {content: "s"; } }
 .dailymotion { background-color: #004e72; &:before {content: "t"; } }
-.vine {background-color: #00b389; &:before {content: "u"; } }
+.vine { background-color: #00b389; &:before {content: "u"; } }
 .flickr { background-color: #1e1e1b; &:before {content: "v"; } }
-.500px { background-color: #58a9de; &:before {content: "w"; } }
+._500px { background-color: #58a9de; &:before {content: "w"; } }
 .instagram { background-color: #9c7c6e; &:before {content: "x"; } }
 .wordpress { background-color: #464646; &:before {content: "y"; } }
 .tumblr { background-color: #45556c; &:before {content: "z"; } }
 .blogger { background-color: #ec661c; &:before {content: "A"; } }
-.technorati {	background-color: #5cb030; &:before {content: "B"; } }
+.technorati { background-color: #5cb030; &:before {content: "B"; } }
 .reddit { background-color: #e74a1e; &:before {content: "C"; } }
 .dribbble { background-color: #e84d88; &:before {content: "D"; } }
 .stumbleupon { background-color: #e64011; &:before {content: "E"; } }
-.digg {background-color: #1d1d1b; &:before {content: "F"; } }
+.digg { background-color: #1d1d1b; &:before {content: "F"; } }
 .envato { background-color: #597c3a; &:before {content: "G"; } }
 .behance { background-color: #000000; &:before {content: "H"; } }
 .delicious { background-color: #020202; &:before {content: "I"; } }
@@ -80,10 +80,10 @@ p {
 .friendfeed { background-color: #2F72C4; &:before {content: "S"; } }
 .newsvine { background-color: #075B2F; &:before {content: "T"; } }
 .identica { background-color: #000000; &:before {content: "U"; } }
-.bebo {background-color: #EF1011; &:before {content: "V"; } }
+.bebo { background-color: #EF1011; &:before {content: "V"; } }
 .zynga { background-color: #DC0606; &:before {content: "W"; } }
 .steam { background-color: #8F8D8A; &:before {content: "X"; } }
-.xbox {background-color: #92C83E; &:before {content: "Y"; } }
+.xbox { background-color: #92C83E; &:before {content: "Y"; } }
 .windows { background-color: #00BDF6; &:before {content: "Z"; } }
 .outlook { background-color: #0072C6; &:before {content: "1"; } }
 .coderwall { background-color: #3E8DCC; &:before {content: "2"; } }
